Cleanining up agentdesign

--- a/network.html
+++ b/network.html
@@ -88,8 +88,8 @@
                   
 
                   // parsing and collecting nodes and edges from the python
-                  nodes = new vis.DataSet([{"color": "#97c2fc", "id": "Naomi", "label": "Naomi", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": "Casey", "label": "Casey", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": "Daichi", "label": "Daichi", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": "Skyler", "label": "Skyler", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": 0, "label": "Naomi", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": 1, "label": "Casey", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": 2, "label": "Daichi", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": 3, "label": "Skyler", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": 4, "label": "Naomi", "shape": "dot", "size": 10}]);
-                  edges = new vis.DataSet([{"from": "Naomi", "to": "Casey", "width": 0}, {"from": "Naomi", "to": "Daichi", "width": 0}, {"from": "Naomi", "to": "Skyler", "width": 0}, {"from": "Naomi", "to": "Naomi", "width": 0}, {"from": "Casey", "to": "Daichi", "width": 0}, {"from": "Casey", "to": "Skyler", "width": 0}, {"from": "Daichi", "to": "Skyler", "width": 0}]);
+                  nodes = new vis.DataSet([{"color": "#97c2fc", "id": "Jordan", "label": "Jordan", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": "Zoya", "label": "Zoya", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": "Noah", "label": "Noah", "shape": "dot", "size": 10}, {"color": "#97c2fc", "id": "Gentry", "label": "Gentry", "shape": "dot", "size": 10}]);
+                  edges = new vis.DataSet([{"from": "Jordan", "to": "Zoya", "width": 0}, {"from": "Jordan", "to": "Noah", "width": 0}, {"from": "Jordan", "to": "Jordan", "width": 0}, {"from": "Jordan", "to": "Gentry", "width": 0}, {"from": "Zoya", "to": "Noah", "width": 0}, {"from": "Zoya", "to": "Gentry", "width": 0}, {"from": "Noah", "to": "Gentry", "width": 0}]);
 
                   nodeColors = {};
                   allNodes = nodes.get({ returnType: "Object" });
